small fixes, added hyperparameters back

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mps\n"
+      "Device: cuda\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
     "if torch.cuda.is_available():\n",
     "    # I read that this works for detecting if notebook is being run in a colab environment, not sure though\n",
     "    if 'COLAB_GPU' in os.environ:\n",
-    "        print(\"colab environment\")\n",
+    "        print(\"colab environment detected\")\n",
     "        device_name = \"gpu\" \n",
     "    else:\n",
     "        device_name = \"cuda\" # CUDA for NVIDIA GPU\n",
@@ -111,7 +111,7 @@
     "\n",
     "# device_name = \"cuda:0\"\n",
     "device = torch.device(device_name)\n",
-    "print(device_name)"
+    "print(f\"Device: {device_name}\")"
    ]
   },
   {
@@ -162,22 +162,32 @@
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
-    "task_param = \"mrpc\"\n",
-    "embedding_param = [\"meanpool_single\"]"
+    "task_param = \"cola\"\n",
+    "embedding_param = [\"meanpool\", \"cls\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task setup"
+    "## Load Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.bias', 'lm_head.layer_norm.bias', 'lm_head.layer_norm.weight']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "if model_param == \"MPNet\":\n",
     "\n",
@@ -200,6 +210,13 @@
     "    if \"sentence\" in \"_\".join(embedding_param):\n",
     "        from sentence_transformers import SentenceTransformer\n",
     "        sentence_model = SentenceTransformer('sentence-transformers/all-distilroberta-v1').to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task Config"
    ]
   },
   {
@@ -236,16 +253,16 @@
       "text/plain": [
        "DatasetDict({\n",
        "    train: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 3668\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 8551\n",
        "    })\n",
        "    validation: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 408\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1043\n",
        "    })\n",
        "    test: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 1725\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1063\n",
        "    })\n",
        "})"
       ]
@@ -325,10 +342,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "meanpool_single embeddings found!\n",
-      "X_train shape: (3668, 1536)\n",
-      "X_val shape  : (408, 1536)\n",
-      "X_test shape : (1725, 1536)\n"
+      "meanpool embeddings found!\n",
+      "X_train shape: (8551, 768)\n",
+      "X_val shape  : (1043, 768)\n",
+      "X_test shape : (1063, 768)\n",
+      "cls embeddings found!\n",
+      "X_train shape: (8551, 768)\n",
+      "X_val shape  : (1043, 768)\n",
+      "X_test shape : (1063, 768)\n"
      ]
     }
    ],
@@ -380,14 +401,14 @@
    "outputs": [],
    "source": [
     "# Define tokenization functions\n",
-    "max_len=512\n",
+    "MAX_LEN = 512\n",
     "\n",
     "def tokenize(examples, name):\n",
     "    tokenized = tokenizer(examples[task_config.col_names[0]],\n",
     "                          add_special_tokens=True,\n",
     "                          padding='max_length',\n",
     "                          truncation=True,\n",
-    "                          max_length=max_len,\n",
+    "                          max_length=MAX_LEN,\n",
     "                          return_tensors='pt')\n",
     "    return {name + \"_\" + key: value.to(device) for key, value in tokenized.items()}\n",
     "\n",
@@ -396,13 +417,13 @@
     "                         add_special_tokens=True,\n",
     "                         padding='max_length',\n",
     "                         truncation=True,\n",
-    "                         max_length=max_len,\n",
+    "                         max_length=MAX_LEN,\n",
     "                         return_tensors='pt')\n",
     "    tokenized_2 = tokenizer(examples[task_config.col_names[1]],\n",
     "                         add_special_tokens=True,\n",
     "                         padding='max_length',\n",
     "                         truncation=True,\n",
-    "                         max_length=max_len,\n",
+    "                         max_length=MAX_LEN,\n",
     "                         return_tensors='pt')\n",
     "    \n",
     "    tokenized_output = {name + \"_\" + key + \"_1\": value.to(device) for key, value in tokenized_1.items()}\n",
@@ -415,7 +436,7 @@
     "                          add_special_tokens=True,\n",
     "                          padding='max_length',\n",
     "                          truncation=True,\n",
-    "                          max_length=max_len,\n",
+    "                          max_length=MAX_LEN,\n",
     "                          return_tensors='pt')\n",
     "    return {name + \"_\" + key: value.to(device) for key, value in tokenized.items()}"
    ]
@@ -615,9 +636,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape: (3668, 1536)\n",
-      "X_val shape  : (408, 1536)\n",
-      "X_test shape : (1725, 1536)\n"
+      "X_train shape: (8551, 1536)\n",
+      "X_val shape  : (1043, 1536)\n",
+      "X_test shape : (1063, 1536)\n"
      ]
     }
    ],
@@ -646,9 +667,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3668, 768)\n",
-      "(408, 768)\n",
-      "(1725, 768)\n"
+      "(8551, 1536)\n",
+      "(1043, 1536)\n",
+      "(1063, 1536)\n"
      ]
     }
    ],
@@ -683,14 +704,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 hyperparameter combinations\n"
+      "72 hyperparameter combinations\n"
      ]
     }
    ],
@@ -699,21 +720,21 @@
     "\n",
     "param_grid = {\n",
     "    'max_epochs': [50],\n",
-    "    'batch_size': [32],\n",
-    "    'learning_rate': [0.001],\n",
+    "    'batch_size': [32, 512],\n",
+    "    'learning_rate': [0.001, 0.01],\n",
     "    'category': [task_config.class_type],\n",
     "    'norm': [False],\n",
-    "    'input_size': [768],\n",
-    "    'layer_size': [2],\n",
+    "    'input_size': [input_size],\n",
+    "    'layer_size': [input_size // 4, input_size // 2, input_size],\n",
     "    'num_classes': [task_config.num_classes],\n",
-    "    'num_layers': [1],\n",
-    "    'weight_decay': [0.0001],\n",
+    "    'num_layers': [1, 3, 5],\n",
+    "    'weight_decay': [0.0001, 0.01],\n",
     "    'patience': [3],\n",
     "    'min_delta': [0],\n",
     "}\n",
     "\n",
     "# default overrides\n",
-    "param_grid['verbose'] = [True]\n",
+    "param_grid['verbose'] = [False]\n",
     "param_grid['device'] = [device_name]\n",
     "param_grid['category'] = [task_config.class_type]\n",
     "param_grid['num_classes'] = [task_config.num_classes]\n",
@@ -725,44 +746,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving results to ./../../fast-results/results/meanpool_single/mrpc/val_20240213_154310_DistilRoBERTa.csv\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "584a5404f0274df297f549d7d8979bac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'FeedForward' object has no attribute 'parameters'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 48\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m# Initialize the model with current set of hyperparameters\u001b[39;00m\n\u001b[1;32m     47\u001b[0m feed_forward \u001b[38;5;241m=\u001b[39m FeedForward(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams)\n\u001b[0;32m---> 48\u001b[0m \u001b[43msummary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeed_forward\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mparam_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43minput_size\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m metrics, train_times_per_epoch, energy_per_epoch \u001b[38;5;241m=\u001b[39m feed_forward\u001b[38;5;241m.\u001b[39mfit(X_train_computed,\n\u001b[1;32m     51\u001b[0m                                                                     Y_train,\n\u001b[1;32m     52\u001b[0m                                                                     X_val_computed,\n\u001b[1;32m     53\u001b[0m                                                                     Y_val)\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m# Log average training time per epoch for current parameter set\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# Note: FFN frequently stops early\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/torchinfo/torchinfo.py:212\u001b[0m, in \u001b[0;36msummary\u001b[0;34m(model, input_size, input_data, batch_dim, cache_forward_pass, col_names, col_width, depth, device, dtypes, mode, row_settings, verbose, **kwargs)\u001b[0m\n\u001b[1;32m    209\u001b[0m     cache_forward_pass \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    211\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m device \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 212\u001b[0m     device \u001b[38;5;241m=\u001b[39m \u001b[43mget_device\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    213\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(device, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    214\u001b[0m     device \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mdevice(device)\n",
-      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/torchinfo/torchinfo.py:481\u001b[0m, in \u001b[0;36mget_device\u001b[0;34m(model, input_data)\u001b[0m\n\u001b[1;32m    479\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m input_data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    480\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 481\u001b[0m         model_parameter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparameters\u001b[49m())\n\u001b[1;32m    482\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[1;32m    483\u001b[0m         model_parameter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'FeedForward' object has no attribute 'parameters'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create output folder if it doesn't exist\n",
     "\n",
@@ -830,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -881,26 +867,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.56338</td>\n",
-       "      <td>0.56338</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.219094</td>\n",
-       "      <td>0.000485</td>\n",
-       "      <td>16.432066</td>\n",
-       "      <td>0.036371</td>\n",
+       "      <td>0.691275</td>\n",
+       "      <td>0.691275</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.364947</td>\n",
+       "      <td>0.000226</td>\n",
+       "      <td>27.371052</td>\n",
+       "      <td>0.016969</td>\n",
        "      <td>50</td>\n",
        "      <td>32</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>768</td>\n",
-       "      <td>768</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0001</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>mps</td>\n",
+       "      <td>False</td>\n",
+       "      <td>cuda</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -908,22 +894,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   mcc       f1  accuracy  num_epochs  training time / epoch  embedding time  \\\n",
-       "0  0.0  0.56338   0.56338           1               0.219094        0.000485   \n",
+       "   mcc        f1  accuracy  num_epochs  training time / epoch  embedding time  \\\n",
+       "0  0.0  0.691275  0.691275           3               0.364947        0.000226   \n",
        "\n",
        "   training energy / epoch  embedding energy  max_epochs  batch_size  ...  \\\n",
-       "0                16.432066          0.036371          50          32  ...   \n",
+       "0                27.371052          0.016969          50          32  ...   \n",
        "\n",
        "    norm input_size  layer_size  num_classes  num_layers  weight_decay  \\\n",
-       "0  False        768         768            1           1        0.0001   \n",
+       "0  False        768           2            1           1        0.0001   \n",
        "\n",
        "   patience  min_delta  verbose  device  \n",
-       "0         3          0     True     mps  \n",
+       "0         3          0    False    cuda  \n",
        "\n",
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -994,26 +980,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.56338</td>\n",
-       "      <td>0.56338</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.219094</td>\n",
-       "      <td>0.000485</td>\n",
-       "      <td>16.432066</td>\n",
-       "      <td>0.036371</td>\n",
+       "      <td>0.691275</td>\n",
+       "      <td>0.691275</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.364947</td>\n",
+       "      <td>0.000226</td>\n",
+       "      <td>27.371052</td>\n",
+       "      <td>0.016969</td>\n",
        "      <td>50</td>\n",
        "      <td>32</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>768</td>\n",
-       "      <td>768</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0001</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>mps</td>\n",
+       "      <td>False</td>\n",
+       "      <td>cuda</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1021,22 +1007,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   mcc       f1  accuracy  num_epochs  training time / epoch  embedding time  \\\n",
-       "0  0.0  0.56338   0.56338           1               0.219094        0.000485   \n",
+       "   mcc        f1  accuracy  num_epochs  training time / epoch  embedding time  \\\n",
+       "0  0.0  0.691275  0.691275           3               0.364947        0.000226   \n",
        "\n",
        "   training energy / epoch  embedding energy  max_epochs  batch_size  ...  \\\n",
-       "0                16.432066          0.036371          50          32  ...   \n",
+       "0                27.371052          0.016969          50          32  ...   \n",
        "\n",
        "    norm input_size  layer_size  num_classes  num_layers  weight_decay  \\\n",
-       "0  False        768         768            1           1        0.0001   \n",
+       "0  False        768           2            1           1        0.0001   \n",
        "\n",
        "   patience  min_delta  verbose  device  \n",
-       "0         3          0     True     mps  \n",
+       "0         3          0    False    cuda  \n",
        "\n",
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
